# Windows-App-AutoLogin

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.example.json
script/: build_and_run.sh  build_windows_dist.cmd  build_windows_dist.ps1  macos_bundle.sh  package_macos.sh
src/: app.rs  app_identity.rs  autologin.rs  autostart.rs  config.rs  debug_fill.rs  diagnose.rs  lib.rs  macos_ax.rs  macos_identity.rs  main.rs  models.rs  monitor.rs  private_permissions.rs  reconnect.rs  single_instance.rs  tray.rs  user_paths.rs  windows_ui.rs
src/background/: mod.rs
src/storage/: mod.rs
src/ui/: accounts.rs  diagnose.rs  logs.rs  mod.rs  settings.rs  theme.rs
