[package]
name = "windows-app-autologin"
version = "0.2.0"
edition = "2021"
rust-version = "1.93"
description = "GUI application that monitors Windows App RDP client and fills matching credential prompts with secure password storage"
license = "MIT"
autobins = false

[lib]
name = "windows_app_autologin"
path = "src/lib.rs"

[[bin]]
name = "windows-app-autologin"
path = "src/main.rs"

[[bin]]
name = "diagnose-macos-ui"
path = "src/bin/diagnose-macos-ui.rs"
required-features = ["diagnostics-ui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
keyring = { version = "3.6", features = ["apple-native", "windows-native"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
auto-launch = "0.6"
libc = "0.2"

eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.34", features = ["svg"] }
tray-icon = { version = "0.24", default-features = false }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
image = { version = "0.25", default-features = false, features = ["png"] }

uuid = { version = "1.11", features = ["v4"] }
dirs = "6.0"
chrono = "0.4"
zeroize = { version = "1.8", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = { version = "0.25", features = ["process"] }
windows-registry = "0.6"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard = { version = "3.6", default-features = false }
core-foundation = "0.10"
security-framework = "3.7"

[build-dependencies]
embed-resource = "3.0.9"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[features]
default = []
debug-fill = []
diagnostics-ui = []
dev-tools = ["debug-fill", "diagnostics-ui"]
release-diagnostics = ["diagnostics-ui"]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
